--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,23 @@
 {
     "name": "mgckid/form",
-    "description": "一个使用简单且和框架无关的表单html生成库在你的php项目里(a easy use and no framework dependencies library to generate form html in your php project)",
+    "description": "使用php编写的表单生成工具，支持链式操作和配置创建表单,支持表单美化(layui风格)",
+    "homepage": "https://github.com/mgckid/form",
     "type": "library",
-    "keywords":["form","create form","generate form"],
+    "keywords":["form generate","form create","layui form","form","表单生成器","表单"],
     "require": {
-        "php": ">=7.0"
+        "php": "7.0"
     },
-    "license": "MIT",
+    "license": "LGPL-2.1",
     "authors": [
         {
             "name": "mgckid",
             "email": "mgckid@qq.com"
         }
     ],
+    "minimum-stability": "dev",
     "autoload": {
-      "psr-4": {
-        "mgckid\\form\\": "src/"
-      },
-      "classmap": ["src/"]
+        "psr-0": {
+            "Form": "src/"
+        }
     }
 }
