--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "使用php编写的html表单生成工具，没有任何依赖可独立使用,支持链式操作和配置创建表单，支持表单美化(默认为layui风格)",
     "homepage": "https://github.com/mgckid/form",
     "type": "library",
-    "keywords":["form generate","form create","layui form","form","表单生成器","表单"],
+    "keywords":["form generate","form create","layui form","表单生成器"],
     "require": {
         "php": "7.0"
     },
