--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "library",
     "keywords":["form generate","form create","layui form","表单生成器"],
     "require": {
-        "php": "7.0"
+        "php": "^7.0"
     },
     "license": "LGPL-2.1",
     "authors": [
